--- a/app/src/main/res/layout/activity_firebase_login.xml
+++ b/app/src/main/res/layout/activity_firebase_login.xml
@@ -4,8 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.splitshare.splitshare.Groups"
-    tools:showIn="@layout/app_bar_groups">
+    tools:context="com.splitshare.splitshare.FirebaseLoginActivity">
 
+    <Button
+        android:id="@+id/button2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        tools:layout_editor_absoluteX="148dp"
+        tools:layout_editor_absoluteY="16dp" />
 </android.support.constraint.ConstraintLayout>
