--- a/app/src/main/res/layout/app_bar_groups.xml
+++ b/app/src/main/res/layout/app_bar_groups.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.splitshare.splitshare.Groups">
+    tools:context="com.splitshare.splitshare.MainActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
