--- a/app/src/main/res/layout/content_groups.xml
+++ b/app/src/main/res/layout/content_groups.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.splitshare.splitshare.Groups"
+    tools:context="com.splitshare.splitshare.MainActivity"
     tools:showIn="@layout/app_bar_groups">
 
 </android.support.constraint.ConstraintLayout>
