--- a/app/src/main/res/layout/activity_MainActivity.xml
+++ b/app/src/main/res/layout/activity_MainActivity.xml
@@ -9,7 +9,7 @@
     tools:openDrawer="start">
 
     <include
-        layout="@layout/app_bar_groups"
+        layout="@layout/app_bar_MainActivity"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
@@ -19,7 +19,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
-        app:headerLayout="@layout/nav_header_groups"
+        app:headerLayout="@layout/nav_header_MainActivity"
         app:menu="@menu/activity_groups_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
