--- a/app/src/main/res/layout/content_mainactivity.xml
+++ b/app/src/main/res/layout/content_mainactivity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,4 +8,9 @@
     tools:context="com.splitshare.splitshare.MainActivity"
     tools:showIn="@layout/app_bar_mainactivity">
 
-</android.support.constraint.ConstraintLayout>
+    <ListView
+        android:id="@+id/mainListView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
+</FrameLayout>
