Changed color scheme

--- a/app/src/main/res/layout/activity_firebase_login.xml
+++ b/app/src/main/res/layout/activity_firebase_login.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.splitshare.splitshare.FirebaseLoginActivity"
-    tools:layout_editor_absoluteY="81dp"
+    tools:layout_editor_absoluteY="0dp"
     tools:layout_editor_absoluteX="0dp"
-    android:background="#5A5A5A">
+    android:background="#525950">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="0dp"
@@ -69,14 +69,5 @@
             tools:layout_constraintRight_creator="1"
             tools:layout_constraintTop_creator="1" />
     </android.support.constraint.ConstraintLayout>
-
-    <android.support.constraint.Guideline
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/guideline"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.5"
-        tools:layout_editor_absoluteY="256dp"
-        tools:layout_editor_absoluteX="0dp" />
 
 </android.support.constraint.ConstraintLayout>
