--- a/app/src/main/res/layout/new_task_activity.xml
+++ b/app/src/main/res/layout/new_task_activity.xml
@@ -20,6 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Finish"
+        style="@style/Widget.AppCompat.Button.Colored"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
@@ -44,6 +45,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Title"
+                android:layout_margin="16dp"
                 android:inputType="text"
                 android:singleLine="true" />
 
@@ -51,6 +53,7 @@
                 android:id="@+id/editText4"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="16dp"
                 android:ems="10"
                 android:hint="Location"
                 android:inputType="text" />
@@ -61,13 +64,18 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:hint="Description"
+                android:layout_margin="16dp"
                 android:inputType="textMultiLine" />
 
             <TextView
                 android:id="@+id/textView7"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="0dp"
+                android:layout_marginBottom="0dp"
                 android:text="Select a Group:"
                 android:textAlignment="center"
                 android:textSize="18sp" />
@@ -76,18 +84,24 @@
                 android:id="@+id/spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="16dp"
                 android:hint="Select a group"
                 android:entries="@array/temp_groups_array"/>
 
             <TextView
                 android:id="@+id/textView6"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="0dp"
+                android:layout_marginBottom="0dp"
                 android:text="Repeat:"
                 android:textAlignment="center"
                 android:textSize="18sp" />
 
             <LinearLayout
+                android:layout_margin="16dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
@@ -128,15 +142,23 @@
                     android:text="F" />
             </LinearLayout>
 
-            <DatePicker
-                android:id="@+id/datePicker"
+            <Button
+                android:id="@+id/startDateSetButton"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <TimePicker
-                android:id="@+id/timePicker"
+                android:layout_height="wrap_content"
+                style="@style/Widget.AppCompat.Button.Colored"
+                android:layout_marginTop="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:text="Set start date" />
+            <Button
+                android:id="@+id/endDateSetButton"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="16dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:text="Set end date" />
 
         </LinearLayout>
     </ScrollView>
