--- a/app/src/main/res/layout/new_task_activity.xml
+++ b/app/src/main/res/layout/new_task_activity.xml
@@ -59,12 +59,12 @@
                 android:inputType="text" />
 
             <EditText
-                android:id="@+id/editText5"
+                android:id="@+id/DescEntry"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_margin="16dp"
                 android:ems="10"
                 android:hint="Description"
-                android:layout_margin="16dp"
                 android:inputType="textMultiLine" />
 
             <TextView
