--- a/app/src/main/res/menu/activity_groups_drawer.xml
+++ b/app/src/main/res/menu/activity_groups_drawer.xml
@@ -2,7 +2,9 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Groups" android:id="@+id/groupSubMenu">
+    <item
+        android:title="Groups"
+        android:id="@+id/groupSubMenu">
         <menu>
             <item
                 android:id="@+id/add_group"
