--- a/app/src/main/res/layout/group_editing_activity.xml
+++ b/app/src/main/res/layout/group_editing_activity.xml
@@ -24,7 +24,10 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
-    <ScrollView
+    <android.support.constraint.ConstraintLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -32,48 +35,34 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/button_cancel"
         android:layout_marginEnd="8dp"
-        android:id="@+id/scrollView2">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+        android:id="@+id/constraintViewAddUser"
+        app:layout_constraintVertical_bias="0.0">
 
             <TextView
                 android:id="@+id/editing_groupx"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Editing Group: " />
+                app:layout_constraintVertical_chainStyle="packed"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/addUserField"
+                android:text="Add member to "
+                android:textAlignment="center"
+                android:textSize="18sp" />
 
             <EditText
                 android:id="@+id/addUserField"
-                android:layout_width="match_parent"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/editing_groupx"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:layout_margin="16dp"
-                android:ems="10"
-                android:hint="Add a New User Here"
-                android:inputType="text" />
-
-            <EditText
-                android:id="@+id/editText4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:ems="10"
-                android:hint="Location"
-                android:inputType="text" />
-
-            <EditText
-                android:id="@+id/DescEntry"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="16dp"
-                android:ems="10"
-                android:hint="Description"
-                android:inputType="textMultiLine" />
-
-        </LinearLayout>
-    </ScrollView>
+                android:hint="Enter user ID"
+                android:inputType="number"/>
+    </android.support.constraint.ConstraintLayout>
 
 
 </android.support.constraint.ConstraintLayout>
