--- a/app/src/main/res/layout/content_mainactivity.xml
+++ b/app/src/main/res/layout/content_mainactivity.xml
@@ -8,9 +8,15 @@
     tools:context="com.splitshare.splitshare.MainActivity"
     tools:showIn="@layout/app_bar_mainactivity">
 
-    <ListView
-        android:id="@+id/mainListView"
+    <android.support.v4.widget.SwipeRefreshLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/swiperefresh"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent">
+        <ListView
+            android:id="@+id/mainListView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 </FrameLayout>
