--- a/app/src/main/res/layout/group_editing_activity.xml
+++ b/app/src/main/res/layout/group_editing_activity.xml
@@ -24,6 +24,17 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
+    <Button
+        android:id="@+id/setAgendaButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Agenda View"
+        tools:layout_editor_absoluteX="96dp"
+        tools:layout_editor_absoluteY="461dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"/>
+
     <android.support.constraint.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -38,30 +49,65 @@
         android:id="@+id/constraintViewAddUser"
         app:layout_constraintVertical_bias="0.0">
 
-            <TextView
-                android:id="@+id/editing_groupx"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintVertical_chainStyle="packed"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toTopOf="@+id/addUserField"
-                android:text="Add member to "
-                android:textAlignment="center"
-                android:textSize="18sp" />
+        <TextView
+            android:id="@+id/editing_groupx"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Group: "
+            android:textAlignment="center"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toTopOf="@+id/addUserField"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
 
-            <EditText
-                android:id="@+id/addUserField"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editing_groupx"
-                app:layout_constraintBottom_toBottomOf="parent"
-                android:layout_margin="16dp"
-                android:hint="Enter user ID"
-                android:inputType="number"/>
+        <Button
+            android:id="@+id/addUserButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Add"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editing_groupx" />
+
+        <EditText
+            android:id="@+id/addUserField"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:layout_marginEnd="8dp"
+            android:hint="Enter user ID to add"
+            android:inputType="number"
+            app:layout_constraintEnd_toStartOf="@+id/addUserButton"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editing_groupx" />
+
+        <Button
+            android:id="@+id/removeUserButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginTop="8dp"
+            android:text="Remove"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/addUserButton" />
+
+        <EditText
+            android:id="@+id/removeUserField"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:ems="10"
+            android:hint="Enter user ID to remove"
+            android:inputType="textPersonName"
+            app:layout_constraintEnd_toStartOf="@+id/removeUserButton"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/addUserField" />
+
     </android.support.constraint.ConstraintLayout>
 
 
