--- a/app/src/main/res/menu/activity_groups_drawer.xml
+++ b/app/src/main/res/menu/activity_groups_drawer.xml
@@ -30,14 +30,8 @@
     <item android:title="View">
         <menu>
             <item
-                android:id="@+id/nav_send"
                 android:layout_width="wrap_content"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Week" />
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Agenda" />
+                android:title="All groups"/>
         </menu>
     </item>
 
