--- a/app/src/main/res/layout/simple_task_details_activity.xml
+++ b/app/src/main/res/layout/simple_task_details_activity.xml
@@ -98,6 +98,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:id="@+id/task_category_details"
                 android:orientation="horizontal">
 
                 <TextView
@@ -121,6 +122,36 @@
                     android:layout_marginEnd="0dp"
                     android:layout_marginBottom="0dp"
                     android:text="NO CATEGORY SPECIFIED!"
+                    android:textSize="18sp" />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:id="@+id/task_description_details"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/task_description_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginBottom="0dp"
+                    android:text="Description:"
+                    android:textStyle="bold"
+                    android:textSize="18sp" />
+
+                <TextView
+                    android:id="@+id/task_description_value"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="0dp"
+                    android:layout_marginBottom="0dp"
+                    android:text="NO DESCRIPTION SPECIFIED!"
                     android:textSize="18sp" />
             </LinearLayout>
             <LinearLayout
@@ -191,6 +222,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:id="@+id/task_pay_to_details"
                     android:orientation="horizontal">
 
                     <TextView
